update test flake8

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,10 @@ ignore =
     W503,
     F811
 # Не проверять код в перечисленных директориях:
+
 exclude =
+    ./backend/api/tests.py,
+    ./backend/api/tests.py/,
     ./backend/api/views.py,
     ./backend/api/views.py/, 
     tests/,
